--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
             <version>23.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-miniapp</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
