--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.profiles.active=dev
 # 404 交给异常处理器处理
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+server.tomcat.uri-encoding=UTF-8
