--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,15 @@
             <artifactId>cos-sts-java</artifactId>
             <version>3.0.3</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
