部署服务器

--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     </parent>
     <groupId>me.xiaoyuu</groupId>
     <artifactId>course_helper</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>course_helper</name>
+    <packaging>jar</packaging>
     <description>a project aims to help student to choose their courses better.</description>
 
     <properties>
@@ -125,11 +125,6 @@
             <version>23.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.github.binarywang</groupId>
-            <artifactId>weixin-java-miniapp</artifactId>
-            <version>3.3.0</version>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -177,6 +172,7 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
